@@ -11,6 +11,7 @@
 * Braintree: Update card verfification payload if billing address fields are not present [yunnydang] #5142
 * DLocal: Update the phone and ip fields [yunnydang] #5143
 * CheckoutV2: Add support for risk data fields [yunnydang] #5147
+* Pin Payments: Add new 3DS params mentioned in Pin Payments docs [hudakh] #4720
 
 == Version 1.136.0 (June 3, 2024)
 * Shift4V2: Add new gateway based on SecurionPay adapter [heavyblade] #4860
